Closed
Bug 1701108
Opened 4 years ago
Closed 4 years ago
"Wrong button set to eContextMenu event?" after right-clicking in tab content
Categories
(Core :: DOM: Events, defect, P2)
Core
DOM: Events
Tracking
()
RESOLVED
FIXED
89 Branch
| Tracking | Status | |
|---|---|---|
| firefox89 | --- | fixed |
People
(Reporter: mstange, Assigned: mstange)
Details
Attachments
(2 files)
In a debug build, if I right click the content area and wait for a bit, I see the following warning:
[Parent 59505, Main Thread] WARNING: Wrong button set to eContextMenu event?: 'mMessage != eContextMenu || (mButton == ((mContextMenuTrigger == eNormal) ? MouseButton::eSecondary : MouseButton::ePrimary) && (mContextMenuTrigger != eControlClick || IsControl()))', file /Users/mstange/code/obj-m-debug/dist/include/mozilla/MouseEvents.h:244
| Assignee | ||
Comment 1•4 years ago
|
||
| Assignee | ||
Comment 2•4 years ago
|
||
We have a warning assertion that wants all contextmenu events to have button 2,
or be marked as a ctrl-click or triggered by the contextmenu keyboard key.
Fixing this avoids a warning in debug builds but is otherwise inconsequential.
Depends on D109825
Updated•4 years ago
|
Severity: -- → S3
Priority: -- → P2
Pushed by mstange@themasta.com:
https://hg.mozilla.org/integration/autoland/rev/4947072b25b9
Split this assertion up into three assertions that are easier to understand. r=masayuki
https://hg.mozilla.org/integration/autoland/rev/99c3e75fd029
Create synthesized contextmenu event with button 2 ("eSecondary") to keep assertions happy. r=Gijs
Comment 4•4 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/4947072b25b9
https://hg.mozilla.org/mozilla-central/rev/99c3e75fd029
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox89:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•