Bug 1701108 - Split this assertion up into three assertions that are easier to understand. r=masayuki

Differential Revision: https://phabricator.services.mozilla.com/D109825